src/objects/Audit_Log__c.object
<CustomObject>
    <description>Tracks all $ budget changes from both the Marketing Plan and Campaign objects for further reporting and tracking.</description>
    <fields>
        <fullName>Amount_of_Adjustment__c</fullName>
        <label>Amount of Adjustment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Plan Transfer</label>
        <referenceTo>MarketingPlanAdjustments__c</referenceTo>
        <relationshipLabel>Audit Logs</relationshipLabel>
        <relationshipName>Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Total_Value__c</fullName>
        <description>Field to be used to calculate the new total value of the Marketing Plan or Campaign</description>
        <label>New Total Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Total_Value__c</fullName>
        <label>Old Total Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_Adjustment__c</fullName>
        <label>Reason for Adjustment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Campaign_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign of the adjustment</description>
        <label>Related Campaign Record</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Audit Logs</relationshipLabel>
        <relationshipName>Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Plan of the adjustment</description>
        <label>Related Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Audit Logs</relationshipLabel>
        <relationshipName>Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Marketing_Plan_Transfer__c</columns>
        <columns>Related_Marketing_Plan__c</columns>
        <columns>Related_Campaign_Record__c</columns>
        <columns>Amount_of_Adjustment__c</columns>
        <columns>New_Total_Value__c</columns>
        <columns>Old_Total_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADT-{000000}</displayFormat>
        <label>Audit Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>